fix: adjust navbar spacing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ nav {
     display: flex;
     background-color: #2b2b2b;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 1rem 0 1rem;
 }
 
 .logo > a {
